--- a/v1.md
+++ b/v1.md
@@ -1,12 +1,43 @@
-# Intro
+# I WOULD RECOMMEND YOU TO WATCH THE VIDEO BEFORE REFERRING THE NOTES FOR BETTER UNDERSTANDING.
+# YOU CAN USE THIS NOTES FOR REVISION PURPOSE.
+
+## Intro
 -> Imagine you have a computer and you have written some code which is usefull for others and they want to access it, insted of giving your code to everyone, you can host it on the internet using some protocol such as API's.
+
+## client-server architecture
 -> Now think of client server architecture, where client sends a request to server to access some service and server responds with a response saying whether it can provide the service or not depending on various conditions.
-  
+
+## problems of self hosting
 -> Instead of self hosting the service we can use cloud to host our service where we dont need to take care of various things such as maintaing and managing DB, computational power and other resources, etc..
- 
+
+## what is cloud?
 -> Cloud is nothing a but a set of computer which we access using remote login, they provide all the resources that are required for money, and we can concentrate more on our business perspective.
 
+## why scalablity is required?
 -> Now when huge number of people are accessing our service, it should be able to handle large number of requests for that we need to increase the scalability of the system.
-  
--> We have two solutions to increase the scalability
+
+## how can we increase the scalability?
+-> We have two solutions to increase the scalability.
+
+1. **Vertical scaling** :- Vertical scaling (or "scaling up") refers to adding more hardware to an existing machine so that you run the same workload on better specs. For example, if a server requires more processing power, vertically scaling the device would mean upgrading its CPU.
+2. **Horizantal scaling** :- A "horizontally scalable" system is one that can increase capacity by adding more computers to the system.
+
+
+**Horizontal Scaling (more machines)
+Vertical Scaling (bigger machine)**
+
+*things to consider*
+
+### VERTICAL SCALING -
+1. single point failure
+2. **inter process communication**
+3. **consistent**
+4. hardware limit.
+
+### HORIZANTAL SCALING -
+1. load balancing required
+2. **resilient**
+3. network calls (RPC)
+4. data inconsistency
+5. **scales well as users increase.**
       
