--- a/v1.md
+++ b/v1.md
@@ -30,14 +30,14 @@ Vertical Scaling (bigger machine)**
 
 ### VERTICAL SCALING -
 1. single point failure
-2. **inter process communication**
-3. **consistent**
+2. ***inter process communication***
+3. ***consistent***
 4. hardware limit.
 
 ### HORIZANTAL SCALING -
 1. load balancing required
-2. **resilient**
+2. ***resilient***
 3. network calls (RPC)
 4. data inconsistency
-5. **scales well as users increase.**
+5. ***scales well as users increase.***
       
