--- a/v1.md
+++ b/v1.md
@@ -26,7 +26,7 @@
 **Horizontal Scaling (more machines)
 Vertical Scaling (bigger machine)**
 
-*things to consider*
+## *Things to consider*
 
 ### VERTICAL SCALING -
 1. single point failure
