--- a/v2.md
+++ b/v2.md
@@ -2,22 +2,30 @@
 
 ## consider a real life example of opening a pizza shop as explained in the video and make sure you take care of the things that are mentioned.
 
-1: vertical scaling: optimise precision and increase through put with the same resources 
+1: **Vertical scaling**: optimise precision and increase through put with the same resources
+(*only one chef with high pay and a lot of work*).
 
-2: preprossing (e.g cron job) : prepare before hand during non pick hours 
+2: **Preprossing** (e.g cron job) : prepare before hand during non pick hours.
 
-3: Backups: keep backups and avoid single point of failure 
+3: **Backups**: keep backups and avoid single point of failure
+(*keep back up chef, just incase if the main chef falls sick*).
 
-4: horizontal scaling: get more resources 
+4: **Horizontal scaling**: get more resources 
+(*hire more number of chefs and keep few backup chefs as well*).
 
-5: micro service architecture 
+5: **Micro service architecture**
+(*In the context of opening and maintaining a pizza shop, microservices architecture can be likened to organizing various aspects of the business as independent, specialized services. Instead of having one monolithic system that handles everything from order management to inventory control, you could break down different functions into separate microservices. For example, you might have a dedicated service for order processing, another for inventory management, and yet another for customer feedback. This modular approach makes it easier to update and scale each service individually, promoting flexibility and efficient management of the pizza shop's operations.*)
 
-6: distributed system (partioning)
+6: **Distributed system (partioning)**
+(*In the context of a pizza shop, a distributed system refers to a setup where different components of the business, such as order processing, inventory management, and delivery coordination, are spread across multiple interconnected computers. Each computer, or node, in this system works independently but collaborates to achieve overall business goals. For instance, online orders might be processed on one server, while inventory data is stored on another. This distribution enhances reliability and performance, as tasks are shared, and the system can continue functioning even if one component experiences issues. However, it also introduces challenges like ensuring consistent communication between distributed nodes to maintain seamless operations.*)
 
-7: load distribution 
+7: **Load distribution**
+(*Load distribution in the context of a pizza shop involves distributing the incoming tasks or requests, such as order processing or delivery coordination, across multiple servers or resources. This ensures that no single component is overwhelmed with too much workload, optimizing performance and responsiveness. In a well-designed system, load distribution helps balance the demand efficiently, preventing bottlenecks and enhancing the overall reliability and scalability of the pizza shop's operations.*)
 
-8: Decoupling 
+8: **Decoupling**
+(*Decoupling in the context of a pizza shop refers to the practice of minimizing dependencies between different components or services within the business operations. By decoupling, each functional unit operates independently without relying heavily on the internal details of other components. For example, order processing and inventory management can be designed as separate, loosely connected modules. This approach enhances flexibility, as changes in one area do not necessarily impact others, making it easier to update, scale, or replace individual components without affecting the overall system's stability. Decoupling is key to building a resilient and adaptable architecture for a pizza shop, allowing for easier maintenance and evolution over time.*)
 
-9: Logging 
+9: **Logging**
 
-10: extensible.
+10: **Extensible**
+(*An extensible architecture in the context of a pizza shop refers to the ability of the system to easily accommodate new features, functionalities, or changes without requiring substantial modifications to the existing codebase. An extensible design allows the pizza shop to adapt to evolving business needs or customer preferences by adding or modifying components without disrupting the overall system. For instance, introducing a new online payment method or expanding the menu categories could be seamlessly integrated without overhauling the entire architecture. This flexibility ensures that the pizza shop can efficiently grow and respond to market demands while maintaining a robust and scalable foundation.*)
