--- a/v2.md
+++ b/v2.md
@@ -2,12 +2,15 @@
 
 ## consider a real life example of opening a pizza shop as explained in the video and make sure you take care of the things that are mentioned.
 
-1: **Vertical scaling**: optimise precision and increase through put with the same resources
+1: **Vertical scaling**
+optimise precision and increase through put with the same resources.
 (*only one chef with high pay and a lot of work*).
 
-2: **Preprossing** (e.g cron job) : prepare before hand during non pick hours.
+2: **Preprossing** (e.g cron job)
+prepare before hand during non pick hours.
 
-3: **Backups**: keep backups and avoid single point of failure
+3: **Backups**
+keep backups and avoid single point of failure.
 (*keep back up chef, just incase if the main chef falls sick*).
 
 4: **Horizontal scaling**: get more resources 
