--- a/v3.md
+++ b/v3.md
@@ -23,7 +23,7 @@ This method helps in balancing the load because the "closeness" is determined by
 
 **We need to reduce the distribution from 25 each to 20 each. So we take 5 from the first server and merge it with the second one. Then we take 10(5 from the first one and 5 from the second one) and merge it with third. So now, both one and two have 20 each. Then we go on taking 15 from third and merging it with fourth and finally, taking 20 from four to create the fifth server's space.**
 
-### Further explanation:
+### __Further explanation__:
 
 1. Suppose you're serving users 1 to 20 on S0, 21-40 on S2 and so on. If you insert or remove a server, each server will have to adjust in a way so that load is balanced. 
 
