--- a/v4.md
+++ b/v4.md
@@ -3,15 +3,21 @@
 ### Main Idea: Consistent hashing distributes data/requests across servers in a distributed system efficiently and fault-tolerantly using a ring-based approach.
 
 __Key Points:__
-
-    Hashing: Each server and request is mapped to a point on a ring using a hash function.
-    Request Routing: Requests are routed to the server closest to their hashed point on the ring.
-    Load Balancing: Servers are evenly distributed on the ring, ensuring balanced load and preventing overload.
-    Fault Tolerance: Server failure doesn't disrupt the system; nearby servers handle its requests.
-    Applications: Used in web caches, databases, and load balancers for improved performance and reliability.
+    **Hashing:**
+    Each server and request is mapped to a point on a ring using a hash function.
+    **Request Routing:**
+    Requests are routed to the server closest to their hashed point on the ring.
+    **Load Balancing:**
+    Servers are evenly distributed on the ring, ensuring balanced load and preventing overload.
+    **Fault Tolerance:**
+    Server failure doesn't disrupt the system; nearby servers handle its requests.
+    **Applications:**
+    Used in web caches, databases, and load balancers for improved performance and reliability.
 
 __Additional Details:__
 
     The ring analogy helps visualize server distribution and request routing.
+
     Adding/removing servers involves calculating their positions on the ring based on their IDs.
+    
     Consistent hashing offers efficiency, fault tolerance, and ease of use for distributed systems.
