--- a/v4.md
+++ b/v4.md
@@ -26,3 +26,25 @@ __Additional Details:__
    Adding/removing servers involves calculating their positions on the ring based on their IDs.
     
    Consistent hashing offers efficiency, fault tolerance, and ease of use for distributed systems.
+   
+----------------------------------------------------------------------------------
+
+Previous video suggested mapping ranges of integers to server ids for consistent routing, which could become problematic as more servers are added.
+
+**Improved Approach with Ring Structure:** Now, requests map to an index in a ring with M indices. Servers are mapped to indices in the same ring using the hash function that also hashes request ids. This makes it easy to find the nearest server by looking clockwise on the ring.
+
+**Mitigating Unbalanced Load:** To avoid unbalanced load due to unlucky hashing, the idea is to use multiple hash functions for servers. This means servers can be mapped to multiple locations in the index ring, improving load distribution.
+
+-----------------------------------------------------------------------------------
+
+The best solution is not to use K hash functions, but to generate K replica ids for each server id. Designing K hash functions while maintaining random uniformity and consistency is hard. Generating K replica ids is easy: xxx gives K replicas xxx + '1', xxx + '2', ..., xxx + 'K'. Then you take these replicas and generate K points on the ring with the same hash function
+
+and this is what is actually used in practice. Chord algorithm is just an example of this technique to add K replicas for each server id
+
+#### *Explaination for this*
+
+Problem with K Hash Functions: Using K hash functions for servers is challenging because designing them to be both random and consistent across the system can be difficult.
+
+Simpler Solution: Replica IDs: A better approach is to generate K replica IDs for each server. For example, if the server ID is "xxx," then you create replicas like "xxx + '1'," "xxx + '2'," and so on. This is easier than designing multiple complex hash functions.
+
+Practical Implementation in Chord Algorithm: The Chord algorithm is an example that uses this technique. It adds K replicas for each server ID. So, instead of dealing with complicated hash functions, it's simpler to generate replicas and use them for consistent and efficient mapping on the system.
