--- a/v5.md
+++ b/v5.md
@@ -13,9 +13,12 @@
   -> *This message queue acts like a notifier which checks heartbeat/working for server for every qunatum time and performs sort of load balancing/consistent hashing to avoid duplicates*.
   
   ***Benefits of using a message queue:***
-      Reliability: If a server crashes, the tasks in the queue are not lost. They can be picked up by another server.
-      Scalability: The system can easily handle more load by adding more servers. The queue will distribute the tasks evenly among the servers.
-      Flexibility: Different types of tasks can be put in the queue, making the system more versatile.
+  
+   **Reliability**: If a server crashes, the tasks in the queue are not lost. They can be picked up by another server.
+   
+   **Scalability**: The system can easily handle more load by adding more servers. The queue will distribute the tasks evenly among the servers.
+   
+   **Flexibility**: Different types of tasks can be put in the queue, making the system more versatile.
 
 ### Examples of message queues:
 
