--- a/v19.md
+++ b/v19.md
@@ -1,10 +1,10 @@
 # Introduction to NoSQL databases
 
-Summary
+## Summary
 
 NoSQL databases are popular for their scalability, flexibility, and ability to handle large amounts of data. They store data differently than SQL databases, and have advantages and disadvantages in terms of data storage, retrieval, and consistency.
 
-Timestamped Highlights
+## Timestamped Highlights
 
 0:18
   📅 NoSQL databases are used in many scenarios, but not in all cases.
@@ -34,7 +34,7 @@ Timestamped Highlights
   🔄 NoSQL databases use sorted string tables for efficient data storage and compaction.
   
   
-Key Insights
+## Key Insights
 
 - 💡 NoSQL databases offer benefits such as scalability, flexible schemas, and built-in partitioning. However, they have challenges with joins and consistency.
 - 💡 The use of distributed consensus and quorum in NoSQL databases ensures data replication and availability, but sacrifices a bit of consistency.
